[gd_scene load_steps=4 format=3 uid="uid://7jqna4amlwxt"]

[ext_resource type="Script" path="res://enemies/bottom_catcher.gd" id="1_jgy12"]
[ext_resource type="AudioStream" uid="uid://dkkc6n5od4tfa" path="res://audio/ESM_Retro_Game_Classic_Explosion_6_8_Bit_Arcade_80s_Weapon_Attack.wav" id="4_wpe4w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_43in4"]
radius = 13.0

[node name="BottomCatcher" type="Area2D"]
position = Vector2(-11, -0.999756)
scale = Vector2(150, 150)
collision_layer = 32
collision_mask = 32
script = ExtResource("1_jgy12")
metadata/_edit_group_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_43in4")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wpe4w")
volume_db = -5.0

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
